; ModuleID = '/home/carl/AnghaBench/esp-idf/components/wpa_supplicant/src/rsn_supp/extr_wpa.c_wpa_sm_set_state.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/wpa_supplicant/src/rsn_supp/extr_wpa.c_wpa_sm_set_state.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.wpa_sm = type { i32, i32 }

@gWpaSm = common dso_local global %struct.wpa_sm zeroinitializer, align 4
@WPA_MIC_FAILURE = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @wpa_sm_set_state(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.wpa_sm*, align 8
  store i32 %0, i32* %2, align 4
  store %struct.wpa_sm* @gWpaSm, %struct.wpa_sm** %3, align 8
  %4 = load i64, i64* @WPA_MIC_FAILURE, align 8
  %5 = load %struct.wpa_sm*, %struct.wpa_sm** %3, align 8
  %6 = call i64 @WPA_SM_STATE(%struct.wpa_sm* %5)
  %7 = icmp eq i64 %4, %6
  br i1 %7, label %8, label %12

8:                                                ; preds = %1
  %9 = load %struct.wpa_sm*, %struct.wpa_sm** %3, align 8
  %10 = getelementptr inbounds %struct.wpa_sm, %struct.wpa_sm* %9, i32 0, i32 1
  %11 = call i32 @ets_timer_disarm(i32* %10)
  br label %12

12:                                               ; preds = %8, %1
  %13 = load i32, i32* %2, align 4
  %14 = load %struct.wpa_sm*, %struct.wpa_sm** %3, align 8
  %15 = getelementptr inbounds %struct.wpa_sm, %struct.wpa_sm* %14, i32 0, i32 0
  store i32 %13, i32* %15, align 4
  ret void
}

declare dso_local i64 @WPA_SM_STATE(%struct.wpa_sm*) #1

declare dso_local i32 @ets_timer_disarm(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
